@startuml mastermind

class App {
    + start():void
    + {static} main
}

App ..> Mastermind

class Mastermind {
    + start():void
}

Mastermind *--> Board
Mastermind *--> Player

class Player {
    + play():void
}

class Board {
    + decode(ProposedCombination):void
}

Player --> Board
Player ..> ProposedCombination

Board *--> SecretCombination
Board o--> "1..10" Result
Board ..> ProposedCombination

abstract class Combination {}
Combination <|-- ProposedCombination
Combination <|-- SecretCombination


class SecretCombination {
    + decode(ProposedCombination):Result
}
Combination *--> "4" Color

SecretCombination ..> ProposedCombination
SecretCombination ..> Result

class Result {
    + isSucess():boolean
}
Result --> ProposedCombination

enum Color {}

@enduml